@@ -266,7 +266,7 @@ void CClientListCtrl::OnShowDetails( wxCommandEvent& WXUNUSED(event) )
 	if ( index > -1 ) {
 		CUpDownClient* client = (CUpDownClient*)GetItemData( index );
 
-		CClientDetailDialog dialog(this, client);
+		CClientDetailDialog dialog((wxWindow*)theApp.amuledlg, client);
 		
 		dialog.ShowModal();
 	}
@@ -292,7 +292,7 @@ void CClientListCtrl::OnSendMessage( wxCommandEvent& WXUNUSED(event) )
 	if ( index > -1 ) {
 		CUpDownClient* client = (CUpDownClient*)GetItemData( index );
 
-		wxString message = ::wxGetTextFromUser( _("Send message to user"), _("Message to send:") );
+		wxString message = ::wxGetTextFromUser( _("Send message to user"), _("Message to send:"), "", (wxWindow*)theApp.amuledlg);
 		
 		if ( !message.IsEmpty() ) {
 			theApp.amuledlg->chatwnd->StartSession(client, false);
